--- a/cpp.project05.sfml.vcxproj
+++ b/cpp.project05.sfml.vcxproj
@@ -71,10 +71,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\include;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\include;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\include;C:\Users\thoma\workspaces\GTECH2\cpp.project05.sfml;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\lib;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\lib;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\lib;$(LibraryPath)</LibraryPath>
-    <IncludePath>C:\Users\rmateescu\Desktop\SFML-2.5.1\include;C:\Users\rmateescu\source\repos\cpp.project05.sfml;C:\Users\matee\source\repos\cpp.project05.sfml;C:\Users\matee\OneDrive\Bureau\SFML-2.5.1\include;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\include;C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\include;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\include;C:\Users\tdelorme\source\repos\cpp.project05.sfml;C:\Users\loctr\Documents\Dev\Visual Libraries\SFML-2.5.1\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\rmateescu\Desktop\SFML-2.5.1\lib;C:\Users\matee\OneDrive\Bureau\SFML-2.5.1\lib;C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\lib;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\lib;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\lib;C:\Users\loctr\Documents\Dev\Visual Libraries\SFML-2.5.1\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\include;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\include;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\include;C:\Users\loctr\Documents\Dev\Visual Libraries\SFML-2.5.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\lib;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\lib;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\lib;C:\Users\loctr\Documents\Dev\Visual Libraries\SFML-2.5.1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -107,18 +105,18 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <AdditionalIncludeDirectories>C:\Users\tdelorme\source\repos\cpp.project05.sfml;C:\Users\thoma\workspaces\GTECH2\cpp.project05.sfml;C:\Users\loctr\Documents\Projets\SFML - Pokemon Like</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\loctr\Documents\Projets\SFML - Pokemon Like</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>sfml-system-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;sfml-audio-d.lib;%(AdditionalDependencies);sfml-system.lib;sfml-window.lib;sfml-graphics.lib;sfml-audio.lib</AdditionalDependencies>
-      <StackReserveSize>200000000</StackReserveSize>
-      <StackCommitSize>200000000</StackCommitSize>
+      <StackReserveSize>2000000000</StackReserveSize>
+      <StackCommitSize>2000000000</StackCommitSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,23 +137,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="src\audio\Music.cpp" />
-    <ClCompile Include="src\audio\Sound.cpp" />
-    <ClCompile Include="src\entities\NPC.cpp" />
-    <ClCompile Include="src\entities\Player.cpp" />
-    <ClCompile Include="src\entities\Pokeball.cpp" />
-    <ClCompile Include="src\entities\Pokemon.cpp" />
-    <ClCompile Include="src\entities\Spray.cpp" />
-    <ClCompile Include="src\entities\TexturedElement.cpp" />
-    <ClCompile Include="src\Game.cpp" />
-    <ClCompile Include="src\map\db_perlin.cpp" />
-    <ClCompile Include="src\map\MapGenerator.cpp" />
-    <ClCompile Include="src\data\DataManager.cpp" />
-    <ClCompile Include="src\view\Button.cpp" />
-    <ClCompile Include="src\view\InventoryMenu.cpp" />
-    <ClCompile Include="src\view\MainWindow.cpp" />
-    <ClCompile Include="src\view\Menu.cpp" />
+    <ClInclude Include="include\audio\Music.h" />
+    <ClInclude Include="include\audio\Sound.h" />
+    <ClInclude Include="include\data\DataManager.h" />
+    <ClInclude Include="include\data\json.hpp" />
+    <ClInclude Include="include\entities\NPC.h" />
+    <ClInclude Include="include\entities\Player.h" />
+    <ClInclude Include="include\entities\Pokeball.h" />
+    <ClInclude Include="include\entities\Pokemon.h" />
+    <ClInclude Include="include\entities\Spray.h" />
+    <ClInclude Include="include\entities\TexturedElement.h" />
+    <ClInclude Include="include\Game.h" />
+    <ClInclude Include="include\map\db_perlin.hpp" />
+    <ClInclude Include="include\map\MapGenerator.h" />
+    <ClInclude Include="include\map\TileMap.h" />
+    <ClInclude Include="include\Structures.h" />
+    <ClInclude Include="include\view\Button.h" />
+    <ClInclude Include="include\view\MainWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\inventoryBackground.png" />
@@ -170,42 +168,40 @@
     <Image Include="assets\sacha.png" />
   </ItemGroup>
   <ItemGroup>
-    <Font Include="assets\pixelFont.ttf" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="include\audio\Music.h" />
-    <ClInclude Include="include\audio\Sound.h" />
-    <ClInclude Include="include\entities\NPC.h" />
-    <ClInclude Include="include\entities\Player.h" />
-    <ClInclude Include="include\entities\Pokeball.h" />
-    <ClInclude Include="include\entities\Pokemon.h" />
-    <ClInclude Include="include\entities\Spray.h" />
-    <ClInclude Include="include\entities\TexturedElement.h" />
-    <ClInclude Include="include\Game.h" />
-    <ClInclude Include="include\data\DataManager.h" />
-    <ClInclude Include="include\data\json.hpp" />
-    <ClInclude Include="include\map\db_perlin.hpp" />
-    <ClInclude Include="include\map\MapGenerator.h" />
-    <ClInclude Include="include\map\TileMap.h" />
-    <ClInclude Include="include\Structures.h" />
-    <ClInclude Include="include\view\Button.h" />
-    <ClInclude Include="include\view\MainWindow.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include=".gitattributes" />
-    <None Include=".gitignore" />
-    <None Include="include\data\moves.json" />
-    <None Include="include\data\pokedex.json" />
-    <None Include="assets\audio\main_music.ogg" />
-    <None Include="assets\audio\music_battle.ogg" />
-    <None Include="README.md" />
-  </ItemGroup>
-  <ItemGroup>
     <Media Include="assets\audio\atk_effect.wav" />
     <Media Include="assets\audio\heal_effect.wav" />
     <Media Include="assets\audio\menu_sound_effect.wav" />
     <Media Include="assets\audio\start_battle.wav" />
     <Media Include="assets\audio\win_battle.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\audio\main_music.ogg" />
+    <None Include="assets\audio\music_battle.ogg" />
+    <None Include="include\data\moves.json" />
+    <None Include="include\data\pokedex.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="assets\pixelFont.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\audio\Music.cpp" />
+    <ClCompile Include="src\audio\Sound.cpp" />
+    <ClCompile Include="src\data\DataManager.cpp" />
+    <ClCompile Include="src\entities\NPC.cpp" />
+    <ClCompile Include="src\entities\Player.cpp" />
+    <ClCompile Include="src\entities\Pokeball.cpp" />
+    <ClCompile Include="src\entities\Pokemon.cpp" />
+    <ClCompile Include="src\entities\Spray.cpp" />
+    <ClCompile Include="src\entities\TexturedElement.cpp" />
+    <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\map\db_perlin.cpp" />
+    <ClCompile Include="src\map\MapGenerator.cpp" />
+    <ClCompile Include="src\view\Button.cpp" />
+    <ClCompile Include="src\view\InventoryMenu.cpp" />
+    <ClCompile Include="src\view\MainWindow.cpp" />
+    <ClCompile Include="src\view\Menu.cpp" />
+    <ClCompile Include="src\view\SettingsMenu.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
